\name{NEWS}
\title{News for Package \pkg{cardelino}}

\section{Changes in version 0.4.0}{
  \itemize{
    \item Support multiple chains when running clone_id (one chain by default)
    \item Support relabel during Gibbs sampling when running clone_id (not in 
          use by default)
    \item Change sim_read_count: the default of wise0 is to "element", i.e.,
          sequencing error rate is both variant and cell specific. Also, a new
          parameter sample_cell is added for the option to turn off sampling 
          cells from seed D
    \item Change heat_matrix for supporting rownames and colnames matching the 
          original order in the matrix instead of alphabetical order
  }
}

\section{Changes in version 0.3.9}{
  \itemize{
    \item Add a runnable R file: run_vireo.R in /bin to run from command line 
    \item Change load_GT_vcf by supporting GP for genotype probability
    \item Change load_cellSNP_vcf by supporting GL for genotype likelihood
    \item Change heat_matrix to for scale_x_discrete by default
  }
}

\section{Changes in version 0.3.8}{
  \itemize{
    \item Change the covergency diagnosis in cell_assign_Gibbs to all cells
    \item Change the donor_read_simulator to betabinomial for each variant in 
          each cell
  }
}
\section{Changes in version 0.3.7}{
  \itemize{
    \item Fix a bug in colMatch in `force` mode
    \item Specify the fixed relax rate in cell_assign_Gibbs, which can be used 
          to turn the input Config as a uniform prior when setting 
          relax_rate_fixed=0.5
  }
}
\section{Changes in version 0.3.4}{
  \itemize{
    \item Add averaged `Config_prob` and `relax_rate` in cell_assign_Gibbs 
          outputs
    \item Add `force` option in colMatch function to force one-to-one match
  }
}

\section{Changes in version 0.3.3}{
  \itemize{
    \item Fix the bug in inferring the relax_rate in cell_assign_Gibbs
  }
}

\section{Changes in version 0.3.2}{
  \itemize{